<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/cyan">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/healthy_india"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:padding="10dp"/>
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:rowCount="3"
        android:columnCount="2"
        android:alignmentMode="alignMargins"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cdMenu"
            android:layout_width="170dp"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="0"
            android:layout_columnWeight="0"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:backgroundTint="@color/green" >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal"
                android:padding="10dp">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/menu"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cdRequirements"
            android:layout_width="170dp"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="0"
            android:layout_columnWeight="0"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:backgroundTint="@color/green" >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal"
                android:padding="10dp">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_nutrition"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nutrition_requirements"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cdStudents"
            android:layout_width="170dp"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="0"
            android:layout_columnWeight="0"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:backgroundTint="@color/green" >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal"
                android:padding="10dp">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_students"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/students"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cdFaq"
            android:layout_width="170dp"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="0"
            android:layout_columnWeight="0"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:backgroundTint="@color/green" >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal"
                android:padding="10dp">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_faq"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faq"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cdLogout"
            android:layout_width="170dp"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="0"
            android:layout_columnWeight="0"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:backgroundTint="@color/green" >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal"
                android:padding="10dp">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_logout"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Logout"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cdView1"
            android:layout_width="170dp"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="0"
            android:layout_columnWeight="0"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:backgroundTint="@color/green" >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal"
                android:padding="10dp">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_about"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>

</RelativeLayout>